cloud server test removal
Thank You, all hacker for testing my own cloud server for free.
All test passed and server will be improved :)